test/zinc_source/compile_errors/enums/11_enum_set_element.zn
// expected-error: set element cannot be an enum in v1
enum Status {
    Idle
}

fn main() {
    items = { Status.Idle }
    print("{items.len()}")
}
